erDiagram
    accounts {
        bigint account_id PK
        varchar email UK
        text password_hash
        timestamp created_at
    }

    applications {
        bigint application_id PK
        bigint account_id FK
        varchar name
        text description
        text icon_url
        timestamp created_at
    }

    parameters {
        bigint parameter_id PK
        bigint application_id FK
        varchar parameter_key UK
        varchar parameter_name
        varchar parameter_type
        text description
        integer value_int
        numeric value_float
        boolean value_bool
        text value_string
        timestamp created_at
    }

    experiments {
        bigint experiment_id PK
        bigint application_id FK
        varchar name
        text description
        varchar status
        char winner_variant_code
        timestamp created_at
        timestamp started_at
        timestamp finished_at
    }

    experiment_parameters {
        bigint experiment_parameter_id PK
        bigint experiment_id FK
        bigint parameter_id FK
        integer variant_a_value_int
        numeric variant_a_value_float
        boolean variant_a_value_bool
        text variant_a_value_string
        integer variant_b_value_int
        numeric variant_b_value_float
        boolean variant_b_value_bool
        text variant_b_value_string
    }

    user_variant_assignments {
        bigint assignment_id PK
        bigint experiment_id FK
        varchar user_id UK
        char variant_code
        timestamp assigned_at
    }

    accounts ||--o{ applications : owns
    applications ||--o{ parameters : contains
    applications ||--o{ experiments : has
    experiments ||--o{ experiment_parameters : includes
    parameters ||--o{ experiment_parameters : tested_in
    experiments ||--o{ user_variant_assignments : assigns
